apps/mattermost/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mattermost
  namespace: mattermost
spec:
  hostnames:
  - mattermost.mcswain.dev
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public
    namespace: envoy-gateway-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mattermost-mattermost-enterprise-edition
      namespace: mattermost
      port: 8065
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 1d
      backendRequest: 23h
